try to load file binary in virtual FS
failed the below
 - loading mp3 and wav file
 - loading the path 'xxx/yyy.txt' format

--- a/index.html
+++ b/index.html
@@ -18,9 +18,13 @@
       canvas: document.getElementById('targetCanvas')
     };
 
-    // Module["preloadedAudios"] = {
-    //   'aaa': 'assets/musics/nyan.mp3'
-    // }
+    Module['preRun'] = function () {
+      FS.createPreloadedFile(
+          '/',
+          'sample_map1.txt',
+          '/sample_map1.txt',
+          true, false);
+    };
     fetch(`${name}.wasm`)
       .then(resp => resp.arrayBuffer())
       .then(buffer => {
