--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
           'sample_map1.txt',
           '/sample_map1.txt',
           true, false);
+      FS.createPreloadedFile(
+          '/',
+          'loop.wav',
+          '/loop.wav',
+          true, false);
+      SDL.rwops = [{ filename: 'loop.wav'}];
     };
     fetch(`${name}.wasm`)
       .then(resp => resp.arrayBuffer())
@@ -33,6 +39,7 @@
         script.src = `${name}.js`;
         document.body.appendChild(script);
       })
+    
   </script>
 </body>
 </html>
